文件服务-本地分片上传

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: ${SERVER_PORT:8008}
+  port: ${SERVER_PORT:8080}
 
 spring:
   profiles:
@@ -7,7 +7,5 @@ spring:
 
 file:
   logger:
-    handler: ${Logger:sl4j}
+    handler: ${Logger:slf4j}
     enable: true
-  path:
-    upload: ${uplaod_path:D://}
