--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,15 @@
         <java.version>11</java.version>
     </properties>
     <dependencies>
+<!--        redis整合-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
 <!--        Mybatis-plus驱动-->
         <dependency>
             <groupId>com.baomidou</groupId>
