--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
         <java.version>11</java.version>
     </properties>
     <dependencies>
+<!--        jasypt-->
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>3.0.3</version>
+        </dependency>
 <!--        redis整合-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
