<Auto> -e:test -type:single  -m:rvc-file -v:1.6 -rp:8089 -de:<-e ACTIVE=dev -e UNIQUE_ID=0 -e SERVER_PORT=8089> "pom文件添加nacos并注册服务"

--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,18 @@
     <description>fileSystem</description>
     <properties>
         <java.version>11</java.version>
+        <nacos.version>2021.0.1.0</nacos.version>
     </properties>
     <dependencies>
+<!--        nacos-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
 <!--        jasypt-->
         <dependency>
             <groupId>com.github.ulisesbocchio</groupId>
@@ -71,7 +81,26 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+                <version>${nacos.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+                <version>${nacos.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <build>
         <plugins>
             <plugin>
