--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
         <nacos.version>2021.0.1.0</nacos.version>
     </properties>
     <dependencies>
+<!--        validate-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>2.4.1</version>
+        </dependency>
 <!--        nacos-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
