--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,6 +5,7 @@ spring:
       max-request-size: 1024MB
       enabled: true
       file-size-threshold: 5MB
+      location: /rvc/file
   mvc:
     static-path-pattern: /**
   datasource:
