[PROD:文件服务] 上线正式服务器<Auto> -e:prod -m:file-service -type:single -v:1.3 -rp:8089 -de:<-e ACTIVE=prod -e UNIQUE_ID=0 -e SERVER_PORT=8089>

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -64,3 +64,7 @@ file:
   #  uploadUrl: ${LINUX_UPLOAD_URL:ENC(bUsOhfap5GKW7FI6zs2H24hqrsRj+6+GMjeWDiymyi4=)}
   uploadUrl: ${LOCATION_UPLOAD:ENC(y2ULx5rMyoEkGRc7cxgM3LLub9p/QhAcC8UYzid+/jQ=)}
   domain: ${DOMAIN:ENC(BKbRncXrpKcrF8FZFu1JcyNLP3t+xP8maYEsRPtbFPI=)}
+jasypt:
+  encryptor:
+    algorithm: PBEWithMD5AndDES
+    password: ${JASYPT_PASSWORD:}
